--- a/css/style.css
+++ b/css/style.css
@@ -640,11 +640,11 @@ html,body{
     opacity: 0.4;
     transform: translate(5px, -5px);
 }
-.icons a:hover .layer span:nth-child(3){
+/* .icons a:hover .layer span:nth-child(3){
     opacity: 0.6;
     transform: translate(10px, -10px);
-}
-.icons a:hover .layer span:nth-child(4){
+} */
+.icons a:hover .layer span:nth-child(3){
     opacity: 0.8;
     transform: translate(15px, -15px);
 }
@@ -658,13 +658,13 @@ html,body{
     color: #e1306c;
     border-color: #e1306c;
 }
-.icons a:nth-child(3) .layer span,
+/* .icons a:nth-child(3) .layer span,
 .icons a:nth-child(3) .text{
     color: #FFFF00;
     border-color: #FFFF00;
-}
-.icons a:nth-child(4) .layer span,
-.icons a:nth-child(4) .text{
+} */
+.icons a:nth-child(3) .layer span,
+.icons a:nth-child(3) .text{
     color: #ff0000;
     border-color: #ff0000;
 }
@@ -674,10 +674,10 @@ html,body{
 .icons a:nth-child(2) .layer span{
     box-shadow: -1px 1px 3px #e1306c;
 }
-.icons a:nth-child(3) .layer span{
+/* .icons a:nth-child(3) .layer span{
     box-shadow: -1px 1px 3px #FFFF00;
-}
-.icons a:nth-child(4) .layer span{
+} */
+.icons a:nth-child(3) .layer span{
     box-shadow: -1px 1px 3px #ff0000;
 }
 .icons a .text{
