--- a/css/style.css
+++ b/css/style.css
@@ -658,15 +658,15 @@ html,body{
     color: #e1306c;
     border-color: #e1306c;
 }
-/* .icons a:nth-child(3) .layer span,
-.icons a:nth-child(3) .text{
-    color: #FFFF00;
-    border-color: #FFFF00;
-} */
 .icons a:nth-child(3) .layer span,
 .icons a:nth-child(3) .text{
     color: #ff0000;
     border-color: #ff0000;
+}
+.icons a:nth-child(4) .layer span,
+.icons a:nth-child(4) .text{
+    color: #FFFF00;
+    border-color: #FFFF00;
 }
 .icons a:nth-child(1) .layer span{
     box-shadow: -1px 1px 3px #426782;
@@ -679,6 +679,9 @@ html,body{
 } */
 .icons a:nth-child(3) .layer span{
     box-shadow: -1px 1px 3px #ff0000;
+}
+.icons a:nth-child(4) .layer span{
+    box-shadow: -1px 1px 3px #FFFF00;
 }
 .icons a .text{
     position: absolute;
