--- a/css/style-switcher.css
+++ b/css/style-switcher.css
@@ -67,7 +67,7 @@
     background: #FFFF00;
 }
 .style-switcher .color-4{
-    background: #00FF00;
+    background: #00FFFF;
 }
 .style-switcher .color-5{
     background: #0000ff;
