--- a/css/style.css
+++ b/css/style.css
@@ -282,6 +282,10 @@ h3.assalamualaikum span{
     border-radius: 5px;
     height: 300px;
 }
+.btn .btn2{
+    display: inline-block;
+    background: #ff004f;
+}
 .about .about-content{
     flex: 0 0 100%;
     max-width: 100%;
@@ -476,219 +480,53 @@ h3.assalamualaikum span{
     height: 335px;
     display: block;
 }
-.contact-title{
-    color: var(--skin-color);
+.contact-right{
+    flex-basis: 60%;
+}
+.social-icons{
+    margin-top: 30px;
     text-align: center;
-    font-size: 25px;
-    margin-bottom: 20px;
 }
-.contact-sub-title{
-    color: var(--text-black-900);
-    text-align: center;
-    font-size: 15px;
-    margin-bottom: 60px;
-}
-.contact .contact-info-item{
-    flex: 0 0 50%;
-    max-width: 50%;
-    text-align: center;
-    margin-bottom: 60px;
-}
-.contact .contact-info-item .icon{
-    display: inline-block;
-}
-.contact .contact-info-item .icon .fa{
-    font-size: 25px;
-    color: var(--skin-color);
-}
-.contact .contact-info-item h4{
-    font-size: 18px;
-    font-weight: 700;
-    color: var(--text-black-900);
-    text-transform: capitalize;
-    margin: 15px 0 5px;
-}
-.contact .contact-info-item p{
-    font-size: 16px;
-    line-height: 25px;
-    color: var(--text-black-700);
-    font-weight: 400;
-}
-.contact .contact-form{
-    flex: 0 0 100%;
-    max-width: 100%;
-}
-.contact .contact-form .col-6{
-    flex: 0 0 50%;
-    max-width: 50%;
-}
-.contact .contact-form .col-12{
-    flex: 0 0 100%;
-    max-width: 100%;
-}
-.contact .contact-form .form-item{
-    margin-bottom: 30px;
-}
-.contact .contact-form .form-item .form-control{
-    width: 100%;
-    height: 50px;
-    border-radius: 25px;
-    background-color: var(--bg-black-100);
-    border: 1px solid var(--bg-black-50);
-    padding: 10px 25px;
-    font-size: 16px;
-    color: var(--text-black-700);
-    transition: all 0.3s ease;
-}
-.contact .contact-form .form-item .form-control:focus{
-    box-shadow: 0 0 20px rgba(48, green46, blue77, alpha0.15);
-}
-.contact .contact-form .form-item textarea.form-control{
-    height: 140px;
-}
-.contact .contact-form .btn{
-    height: 50px;
-    padding: 0 50px;
-}
-@media (max-width:1199px)
-{
-    .hammad{
-        left: -270px;
-    }
-    .main-content{
-        padding-left: 0;
-    }
-    .about .about-content .personal-info .info-item p span{
-        display: block;
-        margin-left: 0;
-    }
-}
-@media (max-width:991px){
-    .contact .contact-info-item{
-        flex: 0 0 50%;
-        max-width: 50%;
-    }
-    .portfolio .portfolio-item{
-        flex: 0 0 50%;
-        max-width: 50%;
-    }
-   
-    .home .home-info{
-        flex: 0 0 100%;
-        max-width: 100%;
-    }
-    .home .home-image{
-        display: none;
-    }
-}
-@media (max-width:767px){
-    .contact .contact-form .col-6,
-    .contact .contact-info-item,
-    .portfolio .portfolio-item,
-    .about .about-content .experience,
-    .about .about-content .education,
-    .about .about-content .skills,
-    .about .about-content .personal-info{
-        flex: 0 0 100%;
-        max-width: 100%;
-    }
-}
-html,body{
-    display: grid;
-    height: 100%;
-    place-items: center;
-    background: #000;
-}
-.icons{
-    display: inline-flex;
-}
-.icons a{
-    margin: 0 85px;
+.social-icons a{
     text-decoration: none;
-    color: #ffffff;
-    display: block;
-    background: #000;
-    position: relative;
-}
-.icons a .layer{
-    width: 55px;
-    height: 55px;
-    transition: transform 0.3s;
-}
-.icons a:hover .layer{
-    transform: rotate(-35deg) skew(20deg);
-}
-.icons a .layer span{
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
-    border: 1px solid #fff;
-    border-radius: 5px;
-    transition: all 0.3s;
-}
-.icons a .layer span.fab{
     font-size: 30px;
-    line-height: 55px;
+    margin-right: 15px;
+    color: #ababab;
+    display: inline-block;
+    transition: transform 0.5s;
+}
+.social-icons a:hover{
+    color:#ff004f;
+    transform: translateY(-5px);
+}
+.contact-right form{
+    width: 100%;
+}
+form input, form textarea{
+    width: 100%;
+    border: 0;
+    outline: none;
+    background: #fff;
+    padding: 15px;
+    margin: 15px 0;
+    color: #000000;
+    font-size: 18px;
+    border-radius: 6px;
+}
+form .btn2{
+    padding: 14px 60px;
+    font-size: 18px;
+    margin-top: 20px;
+    cursor: pointer;
+}
+.copyright{
+    width: 100%;
     text-align: center;
+    padding: 25px 0;
+    background: #fff;
+    font-weight: 300;
+    margin-top: 20px;
 }
-.icons a:hover .layer span:nth-child(1){
-    opacity: 0.2;
-}
-.icons a:hover .layer span:nth-child(2){
-    opacity: 0.4;
-    transform: translate(5px, -5px);
-}
-.icons a:hover .layer span:nth-child(3){
-    opacity: 0.8;
-    transform: translate(10px, -10px);
-}
-.icons a:hover .layer span:nth-child(4){
-    opacity: 10.0;
-    transform: translate(15px, -15px);
-}
-.icons a:nth-child(1) .layer span,
-.icons a:nth-child(1) .text{
-    color: #426782;
-    border-color: #426782;
-}
-.icons a:nth-child(2) .layer span,
-.icons a:nth-child(2) .text{
-    color: #e1306c;
-    border-color: #e1306c;
-}
-.icons a:nth-child(3) .layer span,
-.icons a:nth-child(3) .text{
-    color: #ff0000;
-    border-color: #ff0000;
-}
-.icons a:nth-child(4) .layer span,
-.icons a:nth-child(4) .text{
-    color: #FFFF00;
-    border-color: #FFFF00;
-}
-.icons a:nth-child(1) .layer span{
-    box-shadow: -1px 1px 3px #426782;
-}
-.icons a:nth-child(2) .layer span{
-    box-shadow: -1px 1px 3px #e1306c;
-}
-.icons a:nth-child(3) .layer span{
-    box-shadow: -1px 1px 3px #ff0000;
-}
-.icons a:nth-child(4) .layer span{
-    box-shadow: -1px 1px 3px #FFFF00;
-}
-.icons a .text{
-    position: absolute;
-    left: 50%;
-    bottom: -5px;
-    opacity: 0;
-    transform: translateX(-50%);
-    transition: bottom 0.3s ease, opacity 0.3s ease;
-}
-.icons a:hover .text{
-    bottom: -35px;
-    opacity: 1;
+.copyright i{
+    color: #ff004f;
 }
