--- a/css/style.css
+++ b/css/style.css
@@ -1,24 +1,12 @@
-@import url('https://fonts.googleapis.com/css2?family=Clicker+Script&family=Poppins:wght@200;300;400;500;600;700&display=swap');
-:root{
-    /* --bg-black-900:#f2f2fc; */
-    --bg-black-900:#fdf9ff;
-    --bg-black-100:#fdf9ff;
-    /* --bg-black-100:#f2f2fc; */
-    --bg-black-50:#999999;
-    --text-black-900:#302e4d;
-    --text-black-700:#504e70;
-}
-body.dark{
-    --bg-black-900:#151515;
-    --bg-black-100:#222222;
-    --bg-black-50:#ffffff;
-    --text-black-900:#ffffff;
-    --text-black-700:#e9e9e9;
-}
+@import url(https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css);
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@500;700;900&display=swap');
 body{
+    margin: 0;
     line-height: 1.5;
     font-size: 16px;
-    font-family: 'Poppins' sans-serif;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 400;
 }
 *{
     margin: 0;
@@ -30,51 +18,37 @@ body{
 ::before, ::after{
     box-sizing: border-box;
 }
-ul{
-    list-style: none;
+input,textarea,select{
+    font-family: 'Montserrat', sans-serif;
 }
 .section{
-    background: var(--bg-black-900);
-    min-height: 90vh;
+    background-color: #f2f2fc;
+    min-height: 100vh;
     display: block;
     padding: 0 30px;
-    opacity: 1;
-}
-.hidden{
-    display: none !important;
-}
-.main-content{
-    padding-left: 210px;
-}
-.padd-15{
-    padding-left: 15px;
-    padding-right: 15px;
-}
-.container{
-    max-width: 1100px;
-    width: 100%;
-    margin: auto;
 }
 .section .container{
-    padding-top: 50px;
-    padding-bottom: 50px;
+    padding-top: 30px;
+    padding-bottom: 40px;
 }
 .section-title{
+    -ms-flex: 0 0 100%;
     flex: 0 0 100%;
     max-width: 100%;
-    margin-bottom: 30px;
+    margin-bottom: 60px;
 }
 .section-title h2{
     font-size: 40px;
-    color: var(--text-black-900);
+    color: #302e4d;
+    font-family: 'Rubik', sans-serif;
     font-weight: 700;
+    margin: 0;
     position: relative;
 }
 .section-title h2::before{
     content: '';
     height: 4px;
     width: 50px;
-    background-color: var(--skin-color);
     position: absolute;
     top: 100%;
     left: 0;
@@ -83,214 +57,223 @@ ul{
     content: '';
     height: 4px;
     width: 25px;
-    background-color: var(--skin-color);
     position: absolute;
     top: 100%;
     left: 0;
     margin-top: 8px;
 }
 .row{
+    display: -ms-flexbox;
     display: flex;
+    -ms-flex-wrap: wrap;
     flex-wrap: wrap;
     margin-left: -15px;
     margin-right: -15px;
     position: relative;
 }
+.padd-15{
+    padding-left: 15px;
+    padding-right: 15px;
+}
+.main-content{
+    padding-left: 270px;
+}
+.container{
+    max-width: 1100px;
+    width: 100%;
+    margin: auto;
+}
+.shadow-dark{
+    -webkit-box-shadow: 0 0 20px rgba(48, 46, 77, 0.15);
+    box-shadow: 0 0 20px rgba(48, 46, 77, 0.15);
+}
 .btn{
     font-size: 16px;
+    font-family: 'Rubik', sans-serif;
     font-weight: 500;
     padding: 12px 35px;
-    color: white;
+    color: #ffffff;
     border-radius: 40px;
+    -webkit-transition: all 0.3s ease;
+    transition: all 0.3s ease;
     display: inline-block;
     white-space: nowrap;
     border: none;
-    background: var(--skin-color);
-    transition: all 0.3s ease;
+    cursor: pointer;
 }
 .btn:hover{
+    -webkit-transform: scale(1.05);
     transform: scale(1.05);
 }
-.shadow-dark{
-    box-shadow: 0 0 20px rgba(48, green46, blue77, alpha0.15);
+.hidden{
+    display: none !important;
 }
-.hammad{
-    width: 220px;
-    background: var(--bg-black-100);
+.madi{
+    width: 270px;
+    background-color: #fdf9ff;
     position: fixed;
-    left: 0;
-    top: 0;
-    padding: 30px;
     height: 100%;
-    border-right: 1px solid var(--bg-black-50);
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    left: 0;
+    top: 0;
     z-index: 10;
+    border-right:  1px solid #e8dfec;
+    padding: 30px;
 }
-.hammad .logo{
-    position: absolute;
-    top: 50px;
-    font-size: 30px;
-    text-transform: capitalize;
+.madi .logo{
+    padding: 30px 0;
 }
-.hammad .logo a{
-    color: var(--text-black-900);
-    font-weight: 700;
-    padding: 15px 20px;
-    font-size: 30px;
-    letter-spacing: 5px;
-    position: relative;
-}
-.hammad .logo a span{
-    font-family: 'Clicker Script', cursive;
+.madi .logo a{
     font-size: 40px;
+    color: #302e4d;
+    font-family: 'Rubik', sans-serif;
+    font-weight: 700;
+    text-decoration: none;
+    display: inline-block;
+    position: relative;
+    padding: 0 10px;
+    line-height: 50px;
 }
-.hammad .logo a::before{
+.madi .logo a::before{
     content: '';
-    position: absolute;
-    width: 20px;
     height: 20px;
-    border-bottom: 5px solid var(--skin-color);
-    border-left: 5px solid var(--skin-color);
-    bottom: 0;
+    width: 20px;
+    position: absolute;
+    top: 0;
     left: 0;
 }
-.hammad .logo a::after{
+.madi .logo a::after{
     content: '';
-    position: absolute;
-    width: 20px;
     height: 20px;
-    border-top: 5px solid var(--skin-color);
-    border-right: 5px solid var(--skin-color);
-    top: 0;
+    width: 20px;
+    position: absolute;
+    bottom: 0;
     right: 0;
 }
-.hammad .nav-toggler{
+.madi .nav-toggler{
     height: 40px;
     width: 45px;
-    border: 1px solid var(--bg-black-50);
+    border: 1px solid #d4d4e3;
     cursor: pointer;
     position: fixed;
     left: 300px;
-    top: 20px;
+    top: 30px;
+    z-index: 11;
     border-radius: 5px;
-    background: var(--bg-black-100);
+    background-color: #fdf9ff;
     display: none;
+    -ms-flex-align: center;
     align-items: center;
+    -ms-flex-pack: center;
     justify-content: center;
 }
-.hammad .nav-toggler span{
+.madi .nav-toggler span{
     height: 2px;
     width: 18px;
-    background: var(--skin-color);
     display: inline-block;
     position: relative;
 }
-.hammad .nav-toggler span::before{
+.madi .nav-toggler span::before{
     content: '';
     height: 2px;
     width: 18px;
-    background: var(--skin-color);
     position: absolute;
     top: -6px;
     left: 0;
 }
-.hammad .nav-toggler span::after{
+.madi .nav-toggler span::after{
     content: '';
     height: 2px;
     width: 18px;
-    background: var(--skin-color);
     position: absolute;
     top: 6px;
     left: 0;
 }
-.hammad .nav{
-    margin-top: 50px;
+.madi .nav{
+    list-style: none;
+    margin: 80px 0;
+    padding: 0;
 }
-.hammad .nav li{
-    margin-bottom: 20px;
+.madi .nav li{
     display: block;
 }
-.hammad .nav li a{
+.madi .nav li a{
     font-size: 16px;
     font-weight: 600;
+    color: #302e4d;
+    text-decoration: none;
+    line-height: 45px;
     display: block;
-    border-bottom: 1px solid var(--bg-black-50);
-    color: var(--text-black-900);
-    padding: 5px 15px;
+    border-bottom: 1px solid #e8dfec;
+    -webkit-transition: all 0.3s ease;
+    transition: all 0.3s ease;
+    text-transform: capitalize;
 }
-.hammad .nav li a.active{
-    color: var(--skin-color);
+.madi .nav li a:hover{
+    padding-left: 7px;
 }
-.hammad .nav li a i{
-    margin-right: 15px;
+.madi .nav li a .fa{
+    margin-right: 5px;
+}
+.madi .copyright-text{
+    font-size: 13px;
+    color: #7d7d7d;
 }
 .home{
     min-height: 100vh;
+    display: -ms-flexbox;
     display: flex;
-    color: var(--text-black-900);
 }
-.home .home-info{
-    flex: 0 0 60%;
-    max-width: 60%;
-}
-h3.assalamualaikum{
-    font-size: 28px;
-    margin: 15px 0;
-}
-h3.assalamualaikum span{
-    font-family: 'Clicker Script' , cursive;
-    font-size: 30px;
-    font-weight: 700;
-    color: var(--skin-color);
-}
-.home-info p{
-    margin-bottom: 70px;
-    font-size: 20px;
-    color: var(--text-black-700);
-}
-.home .home-image{
-    flex: 0 0 40%;
-    max-width: 40%;
+.home .intro{
     text-align: center;
-    position: relative;
 }
-.home-image::after{
-    content: '';
-    position: absolute;
-    height: 80px;
-    width: 80px;
-    border-bottom: 10px solid var(--skin-color);
-    border-right: 10px solid var(--skin-color);
-    right: 20px;
-    bottom: -40px;
-
-}
-.home-image::before{
-    content: '';
-    position: absolute;
-    height: 80px;
-    width: 80px;
-    border-top: 10px solid var(--skin-color);
-    border-left: 10px solid var(--skin-color);
-    left: -20px;
-    top: -40px;
-}
-.home .home-image img{
-    margin: auto;
-    border-radius: 5px;
-    height: 300px;
-}
-.btn .btn2{
+.home .intro img{
+    height: 200px;
+    width: 200px;
+    border-radius: 50%;
     display: inline-block;
-    background: #ff004f;
+    border: 8px solid #ffffff;
+}
+.home .intro h1{
+    font-size: 30px;
+    color: #302e4d;
+    font-family: 'Rubik', sans-serif;
+    font-weight: 700;
+    margin: 20px 0 5px;
+}
+.home .intro p{
+    font-size: 16px;
+    font-weight: 500;
+    margin: 0;
+    line-height: 22px;
+    color: #504e70;
+}
+.home .intro .social-links{
+    margin-top: 25px;
+}
+.home .intro .social-links a{
+    height: 35px;
+    width: 35px;
+    display: inline-block;
+    text-align: center;
+    line-height: 35px;
+    color: #ffffff;
+    margin: 0 4px;
+    border-radius: 50%;
+    text-decoration: none;
+    -webkit-transition: all 0.3s ease;
+    transition: all 0.3s ease;
+}
+.home .intro .social-links a:hover{
+    -webkit-transform: scale(1.1);
+    transform: scale(1.1);
 }
 .about .about-content{
+    -ms-flex: 0 0 100%;
     flex: 0 0 100%;
     max-width: 100%;
 }
 .about .about-content .about-text{
+    -ms-flex: 0 0 100%;
     flex: 0 0 100%;
     max-width: 100%;
 }
@@ -298,22 +281,22 @@ h3.assalamualaikum span{
     font-size: 24px;
     margin-bottom: 15px;
     font-weight: 700;
-    color: var(--text-black-900);
-}
-.about .about-content .about-text h3 span{
-    color: var(--skin-color);
+    color: #302e4d;
 }
 .about .about-content .about-text p{
     font-size: 16px;
     line-height: 25px;
-    color: var(--text-black-700);
+    color: #504e70;
+    margin: 0;
 }
 .about .about-content .personal-info{
+    -ms-flex: 0 0 60%;
     flex: 0 0 60%;
     max-width: 60%;
     margin-top: 40px;
 }
 .about .about-content .personal-info .info-item{
+    -ms-flex: 0 0 50%;
     flex: 0 0 50%;
     max-width: 50%;
 }
@@ -321,12 +304,13 @@ h3.assalamualaikum span{
     font-weight: 600;
     padding: 10px 0;
     font-size: 16px;
-    color: var(--text-black-900);
-    border-bottom: 1px solid var(--bg-black-50);
+    color: #302e4d;
+    margin: 0;
+    border-bottom: 1px solid #e8dfec;
 }
 .about .about-content .personal-info .info-item p span{
     font-weight: 400;
-    color: var(--text-black-700);
+    color: #504e70;
     margin-left: 4px;
     display: inline-block;
 }
@@ -338,11 +322,13 @@ h3.assalamualaikum span{
     margin-top: 10px;
 }
 .about .about-content .skills{
+    -ms-flex: 0 0 40%;
     flex: 0 0 40%;
     max-width: 40%;
     margin-top: 40px;
 }
 .about .about-content .skills .skill-item{
+    -ms-flex: 0 0 100%;
     flex: 0 0 100%;
     max-width: 100%;
 }
@@ -350,19 +336,19 @@ h3.assalamualaikum span{
     line-height: 40px;
     font-weight: 600;
     font-size: 16px;
-    color: var(--text-black-900);
+    color: #302e4d;
     text-transform: capitalize;
+    margin: 0;
 }
 .about .about-content .skills .skill-item .progress{
-    background-color: var(--bg-black-50);
+    background-color: #e3e3e3;
     height: 7px;
     border-radius: 4px;
     width: 100%;
     position: relative;
 }
 .about .about-content .skills .skill-item{
-    margin-bottom: 25px;
-
+    margin-bottom: 30px;
 }
 .about .about-content .skills .skill-item .progress .progress-in{
     position: absolute;
@@ -370,36 +356,42 @@ h3.assalamualaikum span{
     top: 0;
     height: 100%;
     border-radius: 4px;
-    background-color: var(--skin-color);
 }
 .about .about-content .skills .skill-item .skill-percent{
     position: absolute;
     right: 0;
-    color: var(--text-black-900);
+    color: #302e4d;
     top: -40px;
     font-weight: 400;
     line-height: 40px;
 }
-.about .about-content .education,
-.about .about-content .experience{
+.about .about-content .education{
+    -ms-flex: 0 0 50%;
     flex: 0 0 50%;
     max-width: 50%;
     margin-top: 30px;
 }
-.about .about-content h3.title{
+.about .about-content .experience{
+    -ms-flex: 0 0 50%;
+    flex: 0 0 50%;
+    max-width: 50%;
+    margin-top: 30px;
+}
+.about .about-content h4.title{
     font-size: 24px;
     margin-bottom: 30px;
-    font-weight: 400;
-    color: var(--text-black-900);
+    font-weight: 600;
+    color: #302e4d;
 }
 .about .about-content .timeline-box{
+    -ms-flex: 0 0 100%;
     flex: 0 0 100%;
     max-width: 100%;
 }
 .about .about-content .timeline{
-    background-color: var(--bg-black-100);
+    background-color: #fdf9ff;
     padding: 30px 15px;
-    border: 1px solid var(--bg-black-50);
+    border: 1px solid #d4d4e3;
     border-radius: 10px;
     width: 100%;
     position: relative;
@@ -419,7 +411,7 @@ h3.assalamualaikum span{
     height: 100%;
     left: 7px;
     top: 0;
-    background-color: var(--skin-color);
+    /* background-color: var(--skin-color); */
 }
 .about .about-content .timeline .circle-dot{
     position: absolute;
@@ -428,13 +420,13 @@ h3.assalamualaikum span{
     height: 15px;
     width: 15px;
     border-radius: 50%;
-    background-color: var(--skin-color);
+    /* background-color: var(--skin-color); */
 }
 .about .about-content .timeline .timeline-date{
     font-weight: 400;
     font-size: 14px;
     margin-bottom: 12px;
-    color: var(--text-black-700);
+    color: #504e70;
 }
 .about .about-content .timeline .timeline-date .fa{
     margin-right: 5px;
@@ -444,63 +436,148 @@ h3.assalamualaikum span{
     font-size: 18px;
     margin-bottom: 15px;
     text-transform: capitalize;
-    color: var(--text-black-900);
+    color: #302e4d;
 }
 .about .about-content .timeline .timeline-text{
     line-height: 25px;
-    font-size: 20px;
-    text-align: justify;
-    color: var(--text-black-700);
+    font-size: 16px;
+    margin: 0;
+    /* text-align: justify; */
+    color: #504e70;
 }
 .portfolio .container{
     padding-bottom: 40px;
 }
-.portfolio .portfolio-heading{
-    flex: 0 0 100%;
-    max-width: 100%;
-    margin-bottom: 40px;
-}
-.portfolio .portfolio-heading h2{
-    color: var(--text-black-900);
-    font-weight: 500;
-}
 .portfolio .portfolio-item{
     flex: 0 0 33.33%;
     max-width: 33.33%;
-    margin-bottom: 15px;
+    margin-bottom: 20px;
+}.portfolio .portfolio-item.hide{
+    display: none;
+}
+.portfolio .portfolio-item.show{
+    display: block;
+    animation: showItem 0.5s ease;
 }
 .portfolio .portfolio-item-inner{
-    border: 6px solid var(--bg-black-100);
-    border-radius: 5px;
+    border: 6px solid #fdf9ff;
+    border-radius: 10px;
     overflow: hidden;
     cursor: pointer;
 }
+.portfolio .portfolio-item-inner .portfolio-img{
+    border: 6px solid #fdf9ff;
+    border-radius: 10px;
+}
 .portfolio .portfolio-item-inner .portfolio-img img{
     width: 100%;
-    height: 335px;
+    height: 325px;
     display: block;
 }
-.contact-right{
-    flex-basis: 60%;
-}
-.social-icons{
-    margin-top: 30px;
+.contact .contact-info-item{
+    -ms-flex: 0 0 33.33%;
+    flex: 0 0 33.33%;
+    max-width: 33.33%;
     text-align: center;
+    margin-bottom: 40px;
 }
-.social-icons a{
-    text-decoration: none;
-    font-size: 30px;
-    margin-right: 15px;
-    color: #ababab;
+.contact .contact-info-item .icon{
     display: inline-block;
-    transition: transform 0.5s;
 }
-.social-icons a:hover{
-    color:#ff004f;
-    transform: translateY(-5px);
+.contact .contact-info-item .icon .fa{
+    font-size: 40px;
 }
-.contact-right form{
+.contact .contact-info-item h4{
+    font-size: 18px;
+    font-weight: 700;
+    color: #302e4d;
+    text-transform: capitalize;
+    margin: 15px 0 5px;
+}
+.contact .contact-info-item p{
+    font-size: 16px;
+    line-height: 25px;
+    color: #504e70;
+    margin: 0;
+    font-weight: 400;
+}
+.contact .contact-form{
+    -ms-flex: 0 0 100%;
+    flex: 0 0 100%;
+    max-width: 100%;
+}
+.contact .contact-form .col-6{
+    -ms-flex: 0 0 50%;
+    flex: 0 0 50%;
+    max-width: 50%;
+}
+.contact .contact-form .col-12{
+    -ms-flex: 0 0 100%;
+    flex: 0 0 100%;
+    max-width: 100%;
+}
+.contact .contact-form .form-item{
+    margin-bottom: 30px;
+}
+.contact .contact-form .form-item .form-control{
     width: 100%;
+    height: 50px;
+    border-radius: 25px;
+    border: 1px solid #d4d4e3;
+    padding: 10px 25px;
+    font-size: 16px;
+    color: #504e70;
+    -webkit-transition: all 0.3s ease;
+    transition: all 0.3s ease;
+}
+.contact .contact-form .form-item .form-control:focus{
+    -webkit-box-shadow: 0 0 20px rgba(48, 46, 77, 0.15);
+    box-shadow: 0 0 20px rgba(48, 46, 77, 0.15);
+}
+.contact .contact-form .form-item textarea.form-control{
+    height: 140px;
+}
+.contact .contact-form .btn{
+    height: 50px;
+    padding: 0 50px;
+}
+@media(max-width: 1199px){
+    /* .madi{
+        left: -270px;
+    }
+    .main-content{
+        padding-left: 0;
+    }
+    .about .about-content .personal-info .info-item p span{
+        display: block;
+        margin-left: 0;
+    } */
+}
+@media(max-width: 991px){
+    .portfolio .portfolio-item{
+    -ms-flex: 0 0 50%;
+    flex: 0 0 50%;
+    max-width: 50%;
+    }
+}
+@media(max-width: 767px){
+    .contact .contact-form .col-6,
+    .about .about-content .experience,
+    .about .about-content .education,
+    .about .about-content .skills,
+    .about .about-content .personal-info{
+    -ms-flex: 0 0 100%;
+    flex: 0 0 100%;
+    max-width: 100%;
+    }
+}
+@media(max-width: 575px){
+    .contact .contact-info-item,
+    .portfolio .portfolio-item{
+    -ms-flex: 0 0 100%;
+    flex: 0 0 100%;
+    max-width: 100%;
+    }
 }
 form input, form textarea{
     width: 100%;
@@ -513,22 +590,11 @@ form input, form textarea{
     font-size: 18px;
     border-radius: 6px;
 }
-form .btn2{
+form .btn{
     padding: 14px 60px;
     font-size: 18px;
     margin-top: 20px;
     cursor: pointer;
-}
-.copyright{
-    width: 100%;
-    text-align: center;
-    padding: 25px 0;
-    background: #fff;
-    font-weight: 300;
-    margin-top: 20px;
-}
-.copyright i{
-    color: #ff004f;
 }
 #msg{
     color: #61b752;
