--- a/css/style-switcher.css
+++ b/css/style-switcher.css
@@ -4,15 +4,16 @@
     top: 40px;
     padding: 15px;
     width: 200px;
-    border: 1px solid var(--bg-black-50);
-    background: var(--bg-black-100);
+    border: 1px solid #d4d4e3;
+    background: #ffffff;
     z-index: 101;
     border-radius: 5px;
     transition: all 0.3s ease;
     transform: translateX(100%);
 }
 .style-switcher.open{
-    transform: translateX(-25px);
+    -webkit-transform: translateX(0%);
+    transform: translateX(0%);
 }
 .style-switcher .s-icon{
     position: absolute;
@@ -20,10 +21,9 @@
     width: 40px;
     text-align: center;
     font-size: 20px;
-    background: var(--bg-black-100);
-    color: var(--text-black-900);
     right: 100%;
-    border: 1px solid var(--bg-black-50);
+    background-color: #ffffff;
+    border: 1px solid #ffffff;
     margin-right: 25px;
     cursor: pointer;
     transition: all 0.3s ease;
@@ -35,15 +35,13 @@
 .style-switcher .style-switcher-toggler{
     top: 0;
 }
-.style-switcher .day-night{
-    top: 55px;
-}
-.style-switcher h4{
-    margin: 0 0 10px;
-    color: var(--text-black-700);
+.style-switcher h5{
+    margin-top: 0;
+    margin-bottom: 8px;
+    padding-bottom: 5px;
+    color: #302e4d;
     font-size: 16px;
-    font-weight: 600;
-    text-transform: capitalize;
+    border-bottom: 1px solid #e8dfec;
 }
 .style-switcher .colors{
     display: flex;
@@ -57,18 +55,54 @@
     border-radius: 50%;
     border: 1px solid red;
 }
-.style-switcher .color-1{
+.style-switcher .pink{
     background: #ec1839;
 }
-.style-switcher .color-2{
-    background: #FFA500;
+.style-switcher .green{
+    background: #72b626;
 }
-.style-switcher .color-3{
-    background: #FFFF00;
+.style-switcher .blue{
+    background: #2196f3;
 }
-.style-switcher .color-4{
-    background: #00FFFF;
+.style-switcher .orange{
+    background: #fa5b0f;
 }
-.style-switcher .color-5{
-    background: #0000ff;
+.style-switcher .yellow{
+    background:  #ffb400;
 }
+
+/* .style-switcher{
+    position: fixed;
+    top: 20px;
+    right: 0;
+    z-index: 100;
+    background-color: #fff;
+    padding: 15px;
+    border: 1px solid #d4d4e3;
+    border-right: none;
+}
+.style-switcher h5{
+    font-size: 16px;
+    color: #302e4d;
+    margin-top: 0;
+    margin-bottom: 8px;
+    padding-bottom: 5px;
+    border-bottom: 1px solid #e8dfec;
+}
+.style-switcher ul{
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+.style-switcher ul li{
+    display: inline-block;
+}
+.style-switcher ul li a{
+    height: 30px;
+    width: 30px;
+    display: block;
+    border-radius: 50%;
+    cursor: pointer;
+    text-decoration: none;
+    margin-right: 2px;
+} */
