--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 @import url(https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css);
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@500;700;900&display=swap');
+
 body{
     margin: 0;
     line-height: 1.5;
@@ -8,6 +9,7 @@ body{
     font-family: 'Montserrat', sans-serif;
     font-weight: 400;
 }
+
 *{
     margin: 0;
     padding: 0;
@@ -15,28 +17,78 @@ body{
     text-decoration: none;
     box-sizing: border-box;
 }
+
 ::before, ::after{
     box-sizing: border-box;
 }
+
 input,textarea,select{
     font-family: 'Montserrat', sans-serif;
 }
+
 .section{
     background-color: #f2f2fc;
     min-height: 100vh;
     display: block;
     padding: 0 30px;
+    position: fixed;
+    left: 270px;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 0;
+    overflow-x: hidden;
+    overflow-y: auto;
+    opacity: 1;
+    -webkit-transition: all 0.3s ease;
+    transition: all 0.3s ease;
 }
+
+.section.back-section{
+    z-index: 1;
+}
+
+.section.active{
+    opacity: 1;
+    z-index: 2;
+    -webkit-animation: slideSection 1s ease;
+    animation: slideSection 1s ease;
+}
+
+@-webkit-keyframes slideSection{
+    0%{
+        -webkit-transform: translateX(100%);
+        transform: translateX(100%);
+    }
+    100%{
+        -webkit-transform: translateX(0%);
+        transform: translateX(0%);
+    }
+}
+
+@keyframes slideSection{
+    0%{
+        -webkit-transform: translateX(100%);
+        transform: translateX(100%);
+    }
+    100%{
+        -webkit-transform: translateX(0%);
+        transform: translateX(0%);
+    }
+}
+
 .section .container{
     padding-top: 30px;
     padding-bottom: 40px;
 }
+
 .section-title{
     -ms-flex: 0 0 100%;
     flex: 0 0 100%;
     max-width: 100%;
     margin-bottom: 60px;
 }
+
 .section-title h2{
     font-size: 40px;
     color: #302e4d;
@@ -45,6 +97,7 @@ input,textarea,select{
     margin: 0;
     position: relative;
 }
+
 .section-title h2::before{
     content: '';
     height: 4px;
@@ -53,6 +106,7 @@ input,textarea,select{
     top: 100%;
     left: 0;
 }
+
 .section-title h2::after{
     content: '';
     height: 4px;
@@ -62,6 +116,7 @@ input,textarea,select{
     left: 0;
     margin-top: 8px;
 }
+
 .row{
     display: -ms-flexbox;
     display: flex;
@@ -74,9 +129,6 @@ input,textarea,select{
 .padd-15{
     padding-left: 15px;
     padding-right: 15px;
-}
-.main-content{
-    padding-left: 270px;
 }
 .container{
     max-width: 1100px;
@@ -108,6 +160,56 @@ input,textarea,select{
 .hidden{
     display: none !important;
 }
+.preloader{
+    background-color: #222222;
+    position: fixed;
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    z-index: 150;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-align: center;
+    align-items: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-transition: all 1s ease;
+    transition: all 1s ease;
+}
+.preloader.opacity-0{
+    opacity: 0;
+}
+.preloader .loader{
+    height: 40px;
+    width: 40px;
+    border: 4px solid #e3e3e3;
+    border-radius: 50%;
+    border-top: 4px solid transparent;
+    border-bottom: 4px solid transparent;
+    -webkit-animation: spin 2s linear infinite;
+    animation: spin 2s linear infinite;
+}
+@-webkit-keyframes spin{
+    0%{
+        -webkit-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+    100%{
+        -webkit-transform: rotate(360deg);
+        transform: rotate(360deg);
+    }
+}
+@keyframes spin{
+    0%{
+        -webkit-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+    100%{
+        -webkit-transform: rotate(360deg);
+        transform: rotate(360deg);
+    }
+}
 .madi{
     width: 270px;
     background-color: #fdf9ff;
@@ -115,9 +217,20 @@ input,textarea,select{
     height: 100%;
     left: 0;
     top: 0;
-    z-index: 10;
+    z-index: 11;
     border-right:  1px solid #e8dfec;
+    overflow-y: auto;
+    -webkit-transition: all 0.3s ease;
+    transition: all 0.3s ease;
+}
+.madi .madi-inner{
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
     padding: 30px;
+    overflow-y: auto;
 }
 .madi .logo{
     padding: 30px 0;
@@ -156,7 +269,7 @@ input,textarea,select{
     cursor: pointer;
     position: fixed;
     left: 300px;
-    top: 30px;
+    top: 20px;
     z-index: 11;
     border-radius: 5px;
     background-color: #fdf9ff;
@@ -165,12 +278,17 @@ input,textarea,select{
     align-items: center;
     -ms-flex-pack: center;
     justify-content: center;
+    -webkit-transition: all 0.3s ease;
+    transition: all 0.3s ease;
 }
 .madi .nav-toggler span{
     height: 2px;
     width: 18px;
     display: inline-block;
     position: relative;
+}
+.madi .nav-toggler.open span{
+    background-color: transparent;
 }
 .madi .nav-toggler span::before{
     content: '';
@@ -180,6 +298,11 @@ input,textarea,select{
     top: -6px;
     left: 0;
 }
+.madi .nav-toggler.open span::before{
+    -webkit-transform: rotate(45deg);
+    transform: rotate(45deg);
+    top: 0px;
+}
 .madi .nav-toggler span::after{
     content: '';
     height: 2px;
@@ -187,6 +310,11 @@ input,textarea,select{
     position: absolute;
     top: 6px;
     left: 0;
+}
+.madi .nav-toggler.open span::after{
+    -webkit-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+    top: 0px;
 }
 .madi .nav{
     list-style: none;
@@ -411,7 +539,6 @@ input,textarea,select{
     height: 100%;
     left: 7px;
     top: 0;
-    /* background-color: var(--skin-color); */
 }
 .about .about-content .timeline .circle-dot{
     position: absolute;
@@ -420,7 +547,6 @@ input,textarea,select{
     height: 15px;
     width: 15px;
     border-radius: 50%;
-    /* background-color: var(--skin-color); */
 }
 .about .about-content .timeline .timeline-date{
     font-weight: 400;
@@ -442,7 +568,6 @@ input,textarea,select{
     line-height: 25px;
     font-size: 16px;
     margin: 0;
-    /* text-align: justify; */
     color: #504e70;
 }
 .portfolio .container{
@@ -541,17 +666,76 @@ input,textarea,select{
     height: 50px;
     padding: 0 50px;
 }
+body.dark .section{
+    background-color: #151515;
+}
+body.dark .contact .contact-form .form-item .form-control,
+body.dark .about .about-content .timeline,
+body.dark .madi{
+    background-color: #222222;
+}
+body.dark .contact .contact-info-item h4,
+body.dark .about .about-content .timeline .timeline-title,
+body.dark .about .about-content h4.title,
+body.dark .about .about-content .skills .skill-item h5,
+body.dark .about .about-content .personal-info .info-item p,
+body.dark  .about .about-content .about-text h3,
+body.dark .section-title h2,
+body.dark .home .intro h1,
+body.dark .madi .logo a,
+body.dark .madi .nav li a{
+    color: #ffffff;
+}
+body.dark .contact .contact-form .form-item .form-control,
+body.dark .contact .contact-info-item p,
+body.dark .about .about-content .timeline .timeline-text,
+body.dark .about .about-content .timeline .timeline-date,
+body.dark .about .about-content .skills .skill-item .skill-percent,
+body.dark .about .about-content .personal-info .info-item p span,
+body.dark .about .about-content .about-text p,
+body.dark .home .intro p{
+    color: #e9e9e9;
+}
+body.dark .madi,
+body.dark .contact .contact-form .form-item .form-control,
+body.dark .portfolio .portfolio-item-inner,
+body.dark .about .about-content .timeline,
+body.dark .about .about-content .personal-info .info-item p,
+body.dark .madi .nav li a{
+    border-color: #393939;
+}
+body.dark .shadow-dark{
+    -webkit-box-shadow: none;
+    box-shadow: none;
+}
 @media(max-width: 1199px){
-    /* .madi{
+    .section .container{
+        padding-top: 70px;
+    }
+    .madi .nav-toggler{
+        display: -ms-flexbox;
+        display: flex;
+        left: 30px;
+    }
+    .madi .nav-toggler.open{
+        left: 200px;
+    }
+    .madi{
         left: -270px;
     }
-    .main-content{
-        padding-left: 0;
+    .madi.open{
+        left: 0px;
+    }
+    .section{
+        left: 0;
+    }
+    .section.open{
+        left: 270px;
     }
     .about .about-content .personal-info .info-item p span{
         display: block;
         margin-left: 0;
-    } */
+    }
 }
 @media(max-width: 991px){
     .portfolio .portfolio-item{
