--- a/css/style.css
+++ b/css/style.css
@@ -546,8 +546,11 @@ input,textarea,select{
 }
 .portfolio .portfolio-item-inner .portfolio-img img{
     width: 100%;
-    height: 325px;
+    height: 200px;
     display: block;
+    justify-content: space-between;
+    justify-items: center;
+    padding: 20px 10px 30px 0;
 }
 .contact .contact-info-item{
     -ms-flex: 0 0 33.33%;
